# acd-l5x-tool-lib

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTAINER.md  Dockerfile  GIT_WORKFLOW_SUMMARY.md  INSTALLATION.md  L5X_TO_ACD_COMPLETE_GUIDE.md  L5X_TO_ACD_CONVERSION_INSTRUCTIONS.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PYPI_PUBLICATION_GUIDE.md  README.md  RELEASE.md  REPOSITORY_REVIEW_SUMMARY.md  ROCKWELL_CONVERSION_OPTIONS_SUMMARY.md  V2.1.0_RELEASE_SUMMARY.md  acd_binary_comparator.py  acd_extractor  acd_extractor.c  acd_l5x_comparison.json  acd_l5x_cross_reference.py  acd_l5x_roundtrip_test.py  acd_parser  acd_parser.c  acd_reverse_engineering_toolkit.py  acd_to_l5x_converter.py  analyze_acd_blocks.py  analyze_comps_structure.py  comprehensive_acd_parser  comprehensive_acd_parser.c  comprehensive_search_results.json  comps_analysis.json  create_final_complete_l5x.py  decode_ladder_logic.py  deep_analysis_report.json  deep_binary_analyzer.py  explore_hutcheb_acd.py  (+32 more)
.github/workflows/: container-publish.yml  release-package.yml
FINAL_COMPLETE_L5X/: ULTIMATE_COMPLETE_PLC100_Mashing.L5X  ULTIMATE_CONVERSION_SUMMARY.json
acd_complete_parse/: complete_parse_results.json
acd_complete_parse/database_files/: RegnLink.Idx
acd_to_l5x_output/databases/: Nameless.Idx
all_modules_extracted/: COMPLETE_PLC100_Mashing.L5X  extraction_summary.json
all_modules_extracted/databases/: SbRegion.Idx
comments_extracted/: extracted_comments.json
comments_extracted/databases/: QuickInfo.XML
complete_logic_extraction/: complete_extraction_report.json
complete_logic_extraction/databases/: ProjectTemplate.ACD
comps_analysis/databases/: CanonicalSize.Idx
direct_logic_extraction/: direct_extraction_report.json  extracted_rungs.json  rungs.db
docs/: plc-file-conversion-howto.md  pypi-package-fix-guide.md  temp-roadmap.md
docs/exports/: AGI_2014_Module.L5X  AGI_2021_Module.L5X  AGI_2042_Module.L5X  AI_ECP100_C_1_Module.L5X  AI_ECP100_C_2_Module.L5X  AI_ECP100_C_3_Module.L5X  AI_ECP100_C_4_Module.L5X  AI_ECP102_C_1_Module.L5X  AI_ECP102_C_2_Module.L5X  AI_ECP103_A_4_Module.L5X  AO_ECP100_C_6_Module.L5X  AO_ECP100_C_7_Module.L5X  AO_ECP103_A_5_Module.L5X  Analog_Input_AOI.L5X  Analog_Valve_AOI.L5X  Analog_Valve_UDT_DataType.L5X  CONV_005_Module.L5X  CONV_015_Module.L5X  CONV_050_Module.L5X  CONV_055_Module.L5X  CONV_105_Module.L5X  CONV_130_Module.L5X  CONV_140_Module.L5X  CONV_150_Module.L5X  CONV_155_Module.L5X  Cooker_1_AutoLogic_Program.L5X  Cooker_1_DeviceLogic_Program.L5X  Cooker_2_AutoLogic_Program.L5X  Cooker_2_DeviceLogic_Program.L5X  Cooker_DeviceLogic_Program.L5X  Cookers_Device_Config_Program.L5X  Cookers_Device_Logic_Program.L5X  Cookers_PID_Logic_Program.L5X  DI_ECP100_A_1_Module.L5X  DI_ECP100_A_2_Module.L5X  DI_ECP100_A_3_Module.L5X  DI_ECP100_A_4_Module.L5X  DI_ECP100_A_5_Module.L5X  DI_ECP101_A_1_Module.L5X  DI_ECP101_A_2_Module.L5X  (+87 more)
docs/l5x-files/: PLC100_Mashing01-1.L5X  PLC100_Mashing_Detailed.L5X  PLC100_Mashing_Enhanced.L5X
hutcheb_acd_output/database_files/: Comments.Idx  UndoFrames.Idx
hutcheb_acd_parsed/: parsed_acd.db
hutcheb_exploration/: exploration_results.json
l5x_to_acd_output/: ULTIMATE_COMPLETE_PLC100_Mashing.ACD  conversion_findings.json
ladder_logic_decode/: instruction_records.json
module_io_extracted/: complete_with_modules.l5x  modules_l5x.xml
real_rungs_extracted/: extracted_rungs_complete.json
simple_l5x_output/: PLC100_Mashing.L5X  conversion_report.json  temp_comps.db
src/plc_format_converter/: __init__.py  cli.py
src/plc_format_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plc_format_converter/core/: __init__.py  converter.py  models.py
src/plc_format_converter/formats/: __init__.py  acd_handler.py  l5x_handler.py
src/plc_format_converter/utils/: __init__.py  git_optimization.py  validation.py
tests/: test_library_integration.py
tests/test_data/: sample_controller.L5X
